# army

./: .gitignore  CMakeLists.txt  README.md  armyconfig.h
core/: CMakeLists.txt  CPU.cpp  CPU.h  CPURegisters.cpp  CPURegisters.h  CPU_p.h  DecodingInstructionDecoder.cpp  DecodingInstructionDecoder.h  Enum.h  Exception.h  InstructionDecoder.cpp  InstructionDecoder.h  ProgramStatusRegister.cpp  ProgramStatusRegister.h  RuntimeException.cpp  RuntimeException.h
demo/: CMakeLists.txt  insn-basic.cpp  mem.cpp  testloader.cpp
exec/: main.cpp
instructions/: ARMInsnDecoder.cpp  ARMInsnDecoder.h  Addition.cpp  Addition.h  AndInstruction.cpp  AndInstruction.h  Arg.cpp  Arg.h  Argument.h  BranchInstruction.cpp  BranchInstruction.h  CLZInstruction.cpp  CLZInstruction.h  CMakeLists.txt  CachingInsnDecoder.cpp  CachingInsnDecoder.h  CondInstruction.cpp  CondInstruction.h  DPInstruction.cpp  DPInstruction.h  EorInstruction.cpp  EorInstruction.h  ImmedArg.cpp  ImmedArg.h  ImmediateArgument.cpp  ImmediateArgument.h  InsnDecoder.cpp  InsnDecoder.h  Instruction.cpp  Instruction.h  InstructionMetadata.h  InstructionSet.h  LoadStoreInstruction.cpp  LoadStoreInstruction.h  LoadStoreMultipleInstruction.cpp  LoadStoreMultipleInstruction.h  MoveInstruction.cpp  MoveInstruction.h  MultiplyInstruction.cpp  MultiplyInstruction.h  (+28 more)
loader/: CMakeLists.txt  ELFLoader.cpp  ELFLoader.h  ExecutableLoader.h  PELoader.cpp  PELoader.h  loadtest.cpp
memory/: CMakeLists.txt  CollectionMemory.cpp  CollectionMemory.h  DecoratorMemory.cpp  DecoratorMemory.h  EndianMemory.cpp  EndianMemory.h  Memory.h  PagedMemory.cpp  PagedMemory.h  StreamMemory.cpp  StreamMemory.h  VirtualMemory.cpp  VirtualMemory.h  compile.sh  test_mem.cpp
platform/: Time.cpp  Time.h  pstdint.h
projects/msvc2008/: army.ncb  army.sln  army.vsprops
projects/msvc2008/core/: core.vcproj
projects/msvc2008/exec/: exec.vcproj
projects/msvc2008/test/: test.vcproj
test/: Run.cpp
test/core/: CPURegistersTest.cpp  CPURegistersTest.h  ProgramStatusRegisterTest.cpp  ProgramStatusRegisterTest.h
test/images/armsdk/: Makefile  string.c  string.h  syscalls.h  syscalls.s  types.h
test/images/fibonacci/: Makefile  fibonacci.c  fibonacci.elf
test/images/prec/: Makefile  prec  prec.c  prec2  prec2.c
test/loader/: ELFLoaderTest.cpp  ELFLoaderTest.h  TestExecutables.cpp  TestExecutables.h
test/memory/: EndianMemoryTest.cpp  EndianMemoryTest.h  File.cpp  File.h  MemoryTest.cpp  MemoryTest.h  PagedMemoryTest.cpp  PagedMemoryTest.h  StreamMemoryTest.cpp  StreamMemoryTest.h  VirtualMemoryTest.cpp  VirtualMemoryTest.h
